- New features in userscripts:
    * `qutedmenu` gained new `window` and `private` options.
    * `qute-keepassxc` now supports unlock-on-demand, multiple account
      selection via rofi, and inserting TOTP-codes (experimental).
- New `colors.webpage.darkmode.increase_text_contrast` setting for Qt 6.3+
- New `fonts.tooltip`, `colors.tooltip.bg` and `colors.tooltip.fg` settings.

Removed
~~~~~~~

- Support for Python 3.6 is dropped, as it's been
  https://discuss.python.org/t/python-3-6-rides-into-the-sunset/12964[end-of-life upstream]
  since December 2021. Python 3.7.0 or newer is now required.
- Support for Qt/PyQt before 5.15.0 and QtWebEngine before 5.15.2 are now
  dropped, as older Qt versions are
  https://endoflife.date/qt[end-of-life upstream] since mid/late 2020
  (5.13/5.14) and late 2021 (5.12 LTS).
- It's planned to drop support for various legacy platforms and libraries which
  are unsupported upstream, such as:
  * The QtWebKit backend
  * macOS 10.14 (via Homebrew)
  * 32-bit Windows (via Qt)
  * Windows 8 (via Qt)
  * Windows 10 before 1809 (via Qt)
  * Possibly other more minor dependency changes

Changed
~~~~~~~

- The qutebrowser icons got moved from `icons/` to `qutebrowser/icons` in the
  repository, so that it's possible for qutebrowser to load them using Python's
  resource system (rather than compiling them into a Qt resource file).
  Packagers are advised to use `misc/Makefile` if possible, which has been
  updated with the new paths.
- The `content.javascript.can_access_clipboard` setting got renamed to
  `content.javascript.clipboard` and now understands three different values
  rather than being a boolean: `none` (formerly `false`), `access` (formerly
  `true`) and `access-paste` (additionally allows pasting content, needed for
  websites like Photopea or GitHub Codespaces).
- The default `hints.selectors` now also match the `treeitem` ARIA roles.
- The `:click-element` command now can also click elements based on its ID